# enn-sdk-samples-v920

./: README.md
HRNet/: CMakeLists.txt  README.md
image-classification/: README.md
image-classification/app/: build.gradle
image-classification/app/src/main/: AndroidManifest.xml
image-classification/app/src/main/cpp/: CMakeLists.txt
image-classification/app/src/main/res/drawable/: baseline_video_24.xml
image-classification/app/src/main/res/layout/: enn_info.xml  fragment_image.xml  fragment_video.xml
image-classification/app/src/main/res/navigation/: nav_graph.xml
image-classification/mobilenetv2/: README.md  settings.gradle
image-classification/mobilenetv2/app/: build.gradle
image-classification/mobilenetv2/app/src/main/: AndroidManifest.xml
image-classification/mobilenetv2/app/src/main/cpp/: enn_jni.cc
image-classification/mobilenetv2/app/src/main/res/drawable/: baseline_photo_camera_24.xml  baseline_video_24.xml
pose-estimation/: README.md
pose-estimation/app/: build.gradle
pose-estimation/app/src/main/: AndroidManifest.xml
pose-estimation/app/src/main/res/layout/: fragment_select.xml  fragment_video.xml
pose-estimation/app/src/main/res/navigation/: nav_graph.xml
pose-estimation/posenet-mobilenet/: README.md  settings.gradle
pose-estimation/posenet-mobilenet/app/: build.gradle
pose-estimation/posenet-mobilenet/app/src/main/: AndroidManifest.xml
pose-estimation/posenet-mobilenet/app/src/main/assets/: posenet-mobilenet.nnc  posenet-mobilenet_O2_SingleCore.nnc
pose-estimation/posenet-mobilenet/app/src/main/cpp/: enn_jni.cc
(+60 files in other folders)
